@@ -1,3 +1,5 @@
+* Sanitize translated RichtText fields content (issue9453)
+
 Version 5.6.4 - 2020-06-29
 * Bug fixes (see mercurial logs for details)
 * Sanitize RichtText fields content (issue9405)
